--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,3 +1,25 @@
 <html>
-<p>Hello World</p>
+    <head>
+        
+        <script type="text/javascript" src="/front-end/recieveInput.js"></script>
+        <link rel="stylesheet" type="text/css" href="main.css"/>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <meta name="theme-color" content="#f5f5f5" media="(prefers-color-scheme: light)">
+        <meta name="theme-color" content="#0B5345" media="(prefers-color-scheme: dark)">
+
+        <link rel="preconnect" href="https://fonts.googleapis.com/"> 
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin=""> 
+
+    </head>
+    <body style="background-color:#0B5345;">
+        <div id='file-upload'>
+            <h1 id='file-upload-header'>File Upload</h1>
+            <input type="file" id="inputForm"/>
+            <input type="submit" id="submitButton"/>
+        </div>
+    </body>
 </html>
+
