--- a/front-end/index.html
+++ b/front-end/index.html
@@ -7,18 +7,23 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <meta name="theme-color" content="#f5f5f5" media="(prefers-color-scheme: light)">
-        <meta name="theme-color" content="#0B5345" media="(prefers-color-scheme: dark)">
-
         <link rel="preconnect" href="https://fonts.googleapis.com/"> 
         <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin=""> 
 
     </head>
-    <body style="background-color:#0B5345;">
-        <div id='file-upload'>
-            <h1 id='file-upload-header'>File Upload</h1>
-            <input type="file" id="inputForm"/>
-            <input type="submit" id="submitButton"/>
+    <body>
+        <div class="left-half">
+            <div id="polidecklogowhite">
+                <object data="./polidecklogowhite.svg" type="image/svg+xml">
+                    <img src="./polidecklogowhite.svg">
+                </object>
+            </div>
+
+            <div id='file-upload'>
+                <h1 id='file-upload-header'>File Upload</h1>
+                <input type="file" id="inputForm"/>
+                <input type="submit" id="submitButton"/>
+            </div>
         </div>
     </body>
 </html>
