--- a/front-end/fileupload.html
+++ b/front-end/fileupload.html
@@ -14,8 +14,8 @@
     <body>
         <div class="left-half">
             <div id="polidecklogowhite">
-                <object data="./polidecklogowhite.svg" type="image/svg+xml">
-                    <img src="./polidecklogowhite.svg">
+                <object data="./polideck-logo/polidecklogowhite.svg" type="image/svg+xml">
+                    <img src="./polideck-logo/polidecklogowhite.svg">
                 </object>
             </div>
 
