--- a/back-end/public/fileupload.html
+++ b/back-end/public/fileupload.html
@@ -2,7 +2,7 @@
     <head>
         
         <script type="text/javascript" src="/front-end/recieveInput.js"></script>
-        <link rel="stylesheet" type="text/css" href="main.css"/>
+        <link rel="stylesheet" type="text/css" href="css/main.css"/>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +14,19 @@
     <body>
         <div class="left-half">
             <div id="polidecklogowhite">
-                <object data="./polideck-logo/polidecklogowhite.svg" type="image/svg+xml">
-                    <img src="./polideck-logo/polidecklogowhite.svg">
+                <object data="images/polidecklogowhite.svg" type="image/svg+xml">
+                    <img src="images/polidecklogowhite.svg">
                 </object>
             </div>
 
             <div id='file-upload'>
                 <h1 id='file-upload-header'>File Upload</h1>
-                <input type="file" id="inputForm"/>
-                <input type="submit" id="submitButton"/>
+                <form action="/add" method="POST">
+                    <fieldset>
+                      <input type="file" id="myFile" name="filename">
+                      <button type ="submit">Submit</button>
+                    </fieldset>
+                  </form>
             </div>
         </div>
     </body>
