--- a/back-end/public/login.html
+++ b/back-end/public/login.html
@@ -93,11 +93,11 @@
     <body>
         <div id="centerVert">
             <div>
-                <img src='/images/polidecklogowhite.svg' class="polidecklogowhite animated FadeInUp animatedFadeInUp" alt="logo" />
+                <img src='images/polidecklogowhite.svg' class="polidecklogowhite animated FadeInUp animatedFadeInUp" alt="logo" />
                 <h1 id="dseHeader" class="animated FadeInUp animatedFadeInUp">Document Storage Engine</h1>
                 <button id="loginWithWallet">Login With Wallet</button>
             </div>
         </div>
-        <script src="/js/login.js"></script>
+        <script src="js/login.js"></script>
     </body>
 </html>
