Added ipfs upload and download endpoints

--- a/back-end/public/fileupload.html
+++ b/back-end/public/fileupload.html
@@ -33,7 +33,7 @@
             <div id='file-upload'>
                 <h1 id='file-upload-header'>File Upload</h1>
                 <form action="/add" enctype="multipart/form-data" method="POST">
-                      <input type="file" id="upl" name="upl">
+                      <input type="file" id="file" name="file">
                       <button type ="submit">Submit</button>
                 </form>
             </div>
