--- a/back-end/public/searchFiles.html
+++ b/back-end/public/searchFiles.html
@@ -52,17 +52,12 @@
             border-radius: 5px;
 
             transition: all .7s ease 0s;
-            }
+            } 
           .gold-button:hover {
               background-color: rgb(204,167,49);
               cursor: pointer;
             }
 
-
-/* 
-          input[type="file"] {
-            display: none;
-          } */
       </style>
 
       <!-- Include Bootstrap for styling -->
@@ -90,8 +85,9 @@
         Manage Files
       </h1>
 
-      <input id="fileupload" type="file" name="fileupload" />
-      <button id="upload-button" onclick="uploadFile()"> Upload </button>
+      <input id="fileupload" type="file" class="gold-button" name="fileupload" />
+
+      <button id="upload-button" class="gold-button" onclick="uploadFile()"> Upload </button>
 
       <input class="form-control" id="myInput" type="text" placeholder="Search..">
       <br>
