Fix search and add download button

--- a/back-end/public/searchFiles.html
+++ b/back-end/public/searchFiles.html
@@ -135,6 +135,11 @@
                 Created By
               </span>
             </th>
+            <th data-field="Download">
+              <span class="text-info">
+                Download
+              </span>
+            </th>
             <th data-field="Edit">
               <span class="text-info">
                 Edit
