--- a/back-end/public/searchFiles.html
+++ b/back-end/public/searchFiles.html
@@ -125,14 +125,9 @@
                 File Name
               </span>
             </th>
-            <th data-field="DateAdded">
+            <th data-field="Hash">
               <span class="text-info">
-                Date Added
-              </span>
-            </th>
-            <th data-field="CreatedBy">
-              <span class="text-info">
-                Created By
+                IPFS Hash
               </span>
             </th>
             <th data-field="Download">
