Fixed styling and added edit button

--- a/back-end/public/searchFiles.html
+++ b/back-end/public/searchFiles.html
@@ -66,7 +66,8 @@
             margin-bottom: 20px; */
 
             color: white;
-            font-size: 20px;
+            font-size: 18px;
+            padding: 4px;
             /* letter-spacing: 4px; */
             font-family: 'Times';
             font-weight: 900;
@@ -81,6 +82,7 @@
           .mini-gold-button:hover {
               background-color: rgb(204,167,49);
               cursor: pointer;
+              text-decoration:none;
           }
 
       </style>
